# sync_notebooks

./: .gitignore  Csv2FactGrid-create.ipynb  Readme.md  dpr_recon.ipynb  dpr_to_fg.ipynb  fg_import_persons.ipynb  fg_to_dpr.ipynb  fg_wiag_ids.ipynb  fg_wiag_recon.ipynb  pyproject.toml  wiag_to_factgrid.ipynb
docs/: Installation.md  Run_SQL_Query_and_Export_CSV.md  Run_factgrid_csv.md  Updating_FactGrid.md  all_notebooks.drawio  office_creation_flow.drawio  wiag_export.md
docs/images/: sync_notebooks.drawio
queries/: get_dpr_data.sql  get_wiag_person_ids.sql  get_wiag_roles.sql  select_dpr_ids.sql  select_dpr_with_deleted.sql
scripts/: .gitignore  README.md  dpr_recon.py  dpr_to_fg.py  factgrid_recon_function_definitions.py  fg_import_persons.py  fg_to_dpr.py  fg_wiag_ids.py  fg_wiag_ids_functions.py  fg_wiag_recon.py  translate.py  wiag_to_factgrid.py  wiag_to_factgrid_functions.py
