[project]
name = "sync-notebooks"
version = "1.0.0"
description = "Jupyter Notebooks for synchronizing data between Digitales Personenregister (DPr), WIAG, and FactGrid"
readme = "Readme.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "openai>=2.7.2",
    "pandas>=2.3.3",
    "polars[rtcompat]>=1.35.2",
    "ratelimit>=2.2.1",
    "requests>=2.32.5",
]
